# opengl_template_visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
old/: CMakeLists_old.txt
shading/: shading.cpp  shading.h
visualizer/: axes_box.cpp  axes_box.h  mouse_state.cpp  mouse_state.h  view_angles.cpp  view_angles.h  visualizer.cpp  visualizer.h
